Fixed overflow in Mailchimp popup

--- a/static/style.css
+++ b/static/style.css
@@ -8,3 +8,7 @@
   bottom: 0;
   top: unset !important;
 }
+
+.mc-layout__modalContent {
+  overflow: hidden !important;
+}
